src/objects/OutcomeChainsSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>API_Secret__c</fullName>
        <label>API Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Host_Url__c</fullName>
        <label>Base Host Url</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cron_Expression__c</fullName>
        <label>Cron Expression</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamID__c</fullName>
        <label>TeamID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Outcome Chains Settings</label>
</CustomObject>